// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transition(props) renders expected snapshots 1`] = `
Object {
  "transitionDelay": undefined,
  "transitionDuration": undefined,
  "transitionProperty": undefined,
  "transitionTimingFunction": undefined,
}
`;

exports[`transition(props) renders expected snapshots 2`] = `
Object {
  "transitionDelay": "2s",
  "transitionDuration": undefined,
  "transitionProperty": "opacity",
  "transitionTimingFunction": undefined,
}
`;
